--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -157,7 +157,7 @@
 	url          = {https://doi.org/10.1007/s00704-024-04893-y}
 }
 @article{Poyhonen2024,
-	title        = {High {Arctic} "hotspots" for sperm whales ({Physeter macrocephalus}) off western and northern {Svalbard, Norway}, revealed by multi-year {Passive Acoustic Monitoring (PAM)}},
+	title        = {High {Arctic} "hotspots" for sperm whales (\textit{Physeter macrocephalus}) off western and northern {Svalbard, Norway}, revealed by multi-year {Passive Acoustic Monitoring (PAM)}},
 	author       = {Pöyhönen, Viivi and Thomisch, Karolin and Kovacs, Kit M. and Lydersen, Christian and Ahonen, Heidi},
 	year         = 2024,
 	month        = {Mar},
@@ -208,7 +208,7 @@
 	abstract     = {Maps showing the thickness of sediments above the bedrock (depth to bedrock, or DTB) are important for many geoscience studies and are necessary for many hydrogeological, engineering, mining, and forestry applications. However, it can be difficult to accurately estimate DTB in areas with varied topography, like lowland and mountainous terrain, because traditional methods of predicting bedrock elevation often underestimate or overestimate the elevation in rugged or incised terrain. Here, we describe a machine learning spatial prediction approach that uses information from traditional digital elevation model derived estimates of terrain morphometry and satellite imagery, augmented with spatial feature engineering techniques to predict DTB across Alberta, Canada. First, compiled measurements of DTB from borehole lithologs were used to train a natural language model to predict bedrock depth across all available lithologs, significantly increasing the dataset size. The combined data were then used for DTB modelling employing several algorithms (XGBoost, Random forests, and Cubist) and spatial feature engineering techniques, using a combination of geographic coordinates, proximity measures, neighbouring points, and spatially lagged DTB estimates. Finally, the results were contrasted with DTB predictions based on modelled relationships with the auxiliary variables, as well as conventional spatial interpolations using inverse-distance weighting and ordinary kriging methods. The results show that the use of spatially lagged variables to incorporate information from the spatial structure of the training data significantly improves predictive performance compared to using auxiliary predictors and/or geographic coordinates alone. Furthermore, unlike some of the other tested methods such as using neighbouring point locations directly as features, spatially lagged variables did not generate spurious spatial artifacts in the predicted raster maps. The proposed method is demonstrated to produce reliable results in several distinct physiographic sub-regions with contrasting terrain types, as well as at the provincial scale, indicating its broad suitability for DTB mapping in general.}
 }
 @article{horticulturae10040326,
-	title        = {Distribution of {Plasmopara viticola} Causing Downy Mildew in Russian Far East Grapevines},
+	title        = {Distribution of \textit{Plasmopara viticola} Causing Downy Mildew in {Russian} Far East Grapevines},
 	author       = {Nityagovsky, Nikolay N. and Ananev, Alexey A. and Suprun, Andrey R. and Ogneva, Zlata V. and Dneprovskaya, Alina A. and Tyunin, Alexey P. and Dubrovina, Alexandra S. and Kiselev, Konstantin V. and Sanina, Nina M. and Aleynova, Olga A.},
 	year         = 2024,
 	journal      = {Horticulturae},
@@ -221,7 +221,7 @@
 	abstract     = {Downy mildew is a severe disease that leads to significant losses in grape yields worldwide. It is caused by the oomycete Plasmopara viticola. The study of the distribution of this agent and the search for endophytic organisms that inhibit the growth of P. viticola are essential objectives to facilitate the transition to sustainable and high-yield agriculture, while respecting the environment. In this study, high-throughput sequencing of the ITS (ITS1f/ITS2 region) and 16S (V4 region) amplicons was employed to analyze 80 samples of leaves and stems from different grapevine species and cultivars grown in the Russian Far East (Vitis amurensis Rupr., Vitis coignetiae Pulliat, and several grapevine cultivars). The analysis revealed the presence of P. viticola in 53.75% of the grape samples. The pathogen P. viticola was not detected in V. amurensis samples collected near Vladivostok and Russky Island. Among the P. viticola-affected samples, only two (out of the eighty analyzed grape samples) from the Makarevich vineyard in Primorsky Krai exhibited disease symptoms, while the majority appeared visually healthy. We also found six distinct P. viticola ASVs in our metagenomic data. Based on phylogenetic analysis, we hypothesize that the P. viticola population in the Russian Far East may have originated from the invasive P. viticola clade aestivalis, which has spread around the world from North America. To identify putative microbial antagonists of P. viticola, a differential analysis of high-throughput sequencing data was conducted using the DESeq2 method to compare healthy and P. viticola-affected samples. The in silico analysis revealed an increased representation of certain taxa in healthy samples compared to P. viticola-affected ones: fungi—Kabatina sp., Aureobasidium sp., and Vishniacozyma sp.; bacteria—Hymenobacter spp., Sphingomonas spp., Massilia spp., Methylobacterium-Methylorubrum spp., and Chryseobacterium spp. This in-silico-obtained information on the potential microbial antagonists of P. viticola serves as a theoretical basis for the development of biocontrol agents for grapevine downy mildew.}
 }
 @article{f15040648,
-	title        = {Fragmentation and Connectivity in dehesa Ecosystems Associated with {Cerambyx} spp. Dispersion and Control: A {Graph-Theory} Approach},
+	title        = {Fragmentation and Connectivity in \textit{dehesa} Ecosystems Associated with \textit{Cerambyx} spp. Dispersion and Control: A {Graph-Theory} Approach},
 	author       = {Cidre-González, Adrián and Rivas, Carlos A. and Navarro-Cerrillo, Rafael M.},
 	year         = 2024,
 	journal      = {Forests},
