--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -233,3 +233,13 @@
 	article-number = 648,
 	abstract     = {Xylophagous insects play a crucial role in forest ecosystems, contributing to population dynamics. The “Cerambyx complex” (CC) constitutes an emerging pest in Mediterranean oak woodlands. We studied the fragmentation and connectivity of holm and cork oak stands in Andalusia (Spain), and the relationships with the current dispersion of CC, as well as the effect on the connectivity and dispersion patterns with the implementation of nests of a predator bird (Garrulus glandarius) to reduce insect populations in highly connected areas. The Kernel Density Estimation (KDE) was used to assess the spatial distribution of CC. Connectivity was assessed using graphs theory (Graphab 2.6) to characterize the importance of patches and linkages for contributing to dispersal. We selected the Eurasian jay (G. glandarius) as a reference bird species to generate “barriers” to the dispersion of the CC. We used the probability of connectivity (PC) and the flux (F) to compare the effect of the introduction of Eurasian jay nets. Results showed an increasing trend in the distribution and incidence of CC during the period 2001–2016, resulting in 7.3% and 13.1% mortality rates for Q. ilex and Q. suber, respectively. The connectivity model using only Q. ilex and Q. suber forests as reference habitats was not enough to explain the distribution of CC. The value of PC and F metrics decreased by 38.09% and 20.59% by introducing 300 nests of Eurasian jay. Our methodology provides a pest management tool using connectivity metrics, which can be integrated with other variables to control pest outbreaks and pest dispersion.}
 }
+@book{mrazek2024drahe,
+	title        = {Drahé kameny {Anatolie, Dodekan} a {Kypru} ve starověku ({Gemstones} of Ancient {Anatolia}, the {Dodecanese} and {Cyprus})},
+	author       = {Mrázek, Ivan},
+	year         = 2024,
+	publisher    = {Masarykova univerzita},
+	address      = {Brno},
+	isbn         = 978-80-280-0354-8,
+	edition      = {First}
+}
+
