--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -239,7 +239,6 @@
 	year         = 2024,
 	publisher    = {Masarykova univerzita},
 	address      = {Brno},
-	isbn         = 978-80-280-0354-8,
-	edition      = {First}
+	isbn         = {978-80-280-0354-8}
 }
 
