--- a/vignettes/articles/faqs.Rmd
+++ b/vignettes/articles/faqs.Rmd
@@ -92,7 +92,8 @@ def +
 
 ## Labeling contours {#label-contour}
 
-Use `geom_spatraster_contour_text()`:
+Use `geom_spatraster_contour_text()`
+[![Experimental](https://dieghernan.github.io/tidyterra/reference/figures/lifecycle-experimental.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental):
 
 ```{r text-contour}
 library(terra)
@@ -114,7 +115,7 @@ if (!file.exists(volcanotemp)) {
 
 r <- rast(volcanotemp)
 
-ggplot(r) +
+ggplot() +
   geom_spatraster_contour_text(data = r) +
   labs(title = "Labelling contours")
 
@@ -132,7 +133,7 @@ labeller <- function(labs) {
 
 # Common labels across ggplot
 
-labs <- c(70, 120, 170, 190)
+labs <- c(100, 140, 180)
 
 ggplot(r) +
   geom_spatraster_contour_text(
@@ -141,11 +142,13 @@ ggplot(r) +
       size = after_stat(level),
       color = after_stat(level)
     ),
-    family = "mono", binwidth = 5,
+    breaks = seq(80, 200, 10),
     # Just label some isolines
-    label_format = labeller(labs = labs)
+    label_format = labeller(labs = labs),
+    family = "mono",
+    fontface = "bold"
   ) +
-  scale_linewidth_continuous(range = c(0.2, 0.5), breaks = labs) +
+  scale_linewidth_continuous(range = c(0.1, 0.5), breaks = labs) +
   scale_color_gradient(low = "grey50", high = "grey10", breaks = labs) +
   scale_size_continuous(range = c(2, 3), breaks = labs) +
   # Integrate scales
@@ -160,6 +163,64 @@ ggplot(r) +
   labs(
     title = "Labelling contours",
     subtitle = "With options: b/w plot"
+  )
+```
+
+### Other alternatives
+
+Thanks to `fortify.SpatRaster()` you can use your `SpatRaster` straight away
+with the **metR** package (see [Hexagonal grids (and other geoms)]). Use the
+parameter(s) `bins/binwidth/breaks` to align both labels and lines:
+
+```{r metr}
+library(metR)
+br <- seq(80, 200, 10)
+labs <- c(100, 140, 180)
+
+# Replicate previous map with tidyterra + metR strategy
+ggplot(r, aes(x, y)) +
+  geom_spatraster_contour(
+    data = r,
+    aes(
+      linewidth = after_stat(level),
+      color = after_stat(level)
+    ),
+    breaks = br,
+    # Don't inherit fortified aes
+    inherit.aes = FALSE
+  ) +
+  geom_text_contour(
+    aes(
+      z = elevation, color = after_stat(level),
+      size = after_stat(level)
+    ),
+    breaks = br,
+    # Text options
+    check_overlap = TRUE,
+    label.placer = label_placer_minmax(),
+    stroke = 0.3,
+    stroke.colour = "white",
+    family = "mono",
+    fontface = "bold",
+    key_glyph = "path"
+  ) +
+  scale_linewidth_continuous(range = c(0.1, 0.5), breaks = labs) +
+  scale_color_gradient(low = "grey50", high = "grey10", breaks = labs) +
+  scale_size_continuous(range = c(2, 3), breaks = labs) +
+  # Integrate scales
+  guides(
+    linewidth = guide_legend("meters"),
+    size = guide_legend("meters"),
+    color = guide_legend("meters")
+  ) +
+  # Theme and titles
+  theme_bw() +
+  theme(text = element_text(family = "mono")) +
+  labs(
+    title = "Labelling contours",
+    subtitle = "tidyterra and metR: b/w plot",
+    x = "",
+    y = ""
   )
 ```
 
@@ -659,6 +720,77 @@ ggplot(r, aes(x, y, z = elevation), maxcell = 1000) +
     subtitle = "Using fortify (implicit)",
     x = NULL, y = NULL
   )
+```
+
+### tidyterra and metR
+
+**metR** is a package that also provides **ggplot2** extensions, mainly focused
+on the analysis of meteorological fields. As shown previously (see [Labeling
+contours](#label-contour)) it is possible to use both packages to provide rich
+plots. This section shows some demos.
+
+```{r metr_demo}
+# load libraries and files
+library(terra)
+library(tidyterra)
+library(ggplot2)
+library(metR)
+
+volcanotemp <- "volcano2hires.tif"
+
+# Download example file
+volcanourl <- paste0(
+  "https://github.com/dieghernan/tidyterra/blob/main/",
+  "data-raw/volcano2hires.tif?raw=true"
+)
+
+if (!file.exists(volcanotemp)) {
+  download.file(volcanourl, volcanotemp, mode = "wb")
+}
+
+
+r <- rast(volcanotemp)
+```
+
+#### `metR::geom_contour_tanaka()`
+
+```{r tanaka}
+ggplot(r, aes(x, y)) +
+  geom_spatraster(data = r, inherit.aes = FALSE) +
+  geom_contour_tanaka(aes(z = elevation), breaks = seq(70, 200, 5)) +
+  scale_fill_viridis_c(option = "magma") +
+  labs(x = "", y = "", title = "tidyterra and metR: tanaka contours")
+
+# Using geom_spatraster_contour_filled
+ggplot(r, aes(x, y)) +
+  geom_spatraster_contour_filled(
+    data = r, inherit.aes = FALSE,
+    breaks = seq(60, 200, 20)
+  ) +
+  geom_contour_tanaka(aes(z = elevation),
+    breaks = seq(70, 200, 5),
+    sun.angle = -90, dark = "gray50"
+  ) +
+  scale_fill_viridis_d(option = "cividis") +
+  labs(
+    x = "", y = "", title = "tidyterra and metR: tanaka contours",
+    subtitle = "with geom_contour_filled"
+  )
+```
+
+#### `metR::geom_relief()`
+
+```{r hill}
+ggplot(r, aes(x, y)) +
+  geom_relief(aes(z = elevation)) +
+  geom_spatraster(
+    data = r, inherit.aes = FALSE,
+    aes(alpha = after_stat(value))
+  ) +
+  scale_fill_cross_blended_c(breaks = seq(100, 200, 20)) +
+  scale_alpha(range = c(1, 0.25)) +
+  guides(alpha = "none", fill = guide_legend(reverse = TRUE)) +
+  labs(x = "", y = "", title = "tidyterra and metR: reliefs")
 ```
 
 ## Session info
