Add grass ggplot2 palettes

--- a/man/chunks/grassdec.Rmd
+++ b/man/chunks/grassdec.Rmd
@@ -14,7 +14,7 @@ grass_desc <- tibble::tribble(
   "byr", "General", "blue through yellow to red",
   "celsius", "General", "blue to red for degree Celsius temperature",
   "corine", "Land Cover", "EU Corine land cover colors",
-  "curvature", "General", "for terrain curvatures (from v.surf.rst and r.slope.aspect)",
+  "curvature", "General", "for terrain curvatures",
   "differences", "General", "differences oriented colors",
   "elevation", "Topography", "maps relative ranges of raster values to elevation color ramp",
   "etopo2", "Topography", "colors for ETOPO2 worldwide bathymetry/topography",
@@ -54,7 +54,7 @@ grass_desc <- tibble::tribble(
   "ryg", "General", "red through yellow to green",
   "sepia", "General", "yellowish-brown through to white",
   "slope", "General", "r.slope.aspect-type slope colors for raster values 0-90",
-  "soilmoisture", "Natural", "soilmoisture color table (0.0-1.0)",
+  "soilmoisture", "Natural", "soil moisture color table (0.0-1.0)",
   "srtm", "Topography", "color palette for Shuttle Radar Topography Mission elevation",
   "srtm_plus", "Topography", "color palette for Shuttle Radar Topography Mission elevation (with seafloor colors)",
   "terrain", "Topography", "global elevation color table covering -11000 to +8850m",
