--- a/vignettes/articles/palettes.Rmd
+++ b/vignettes/articles/palettes.Rmd
@@ -143,7 +143,22 @@ for (i in allpals) {
 }
 ```
 
-## 
+## `scale_fill_princess_*`
+
+Check `scale_fill_princess_c()` for more info.
+
+```{r princess, echo=FALSE}
+allpals <- sort(unique(princess_db$pal))
+
+for (i in allpals) {
+  ss <- baseplot +
+    scale_fill_princess_c(palette = i) +
+    labs(title = paste0(i)) +
+    theme_void()
+
+  print(ss)
+}
+```
 
 ## Session info
 
