--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -241,4 +241,19 @@
 	address      = {Brno},
 	isbn         = {978-80-280-0354-8}
 }
+@article{Crowson2024,
+	title        = {Challenges for monitoring artificial turf expansion with satellite remote sensing},
+	author       = {Crowson, Merry and Williams, Jake and Sharma, James and Pettorelli, Nathalie},
+	year         = 2024,
+	month        = {05},
+	day          = 28,
+	journal      = {Environmental Monitoring and Assessment},
+	volume       = 196,
+	number       = 6,
+	pages        = 580,
+	doi          = {10.1007/s10661-024-12724-w},
+	issn         = {1573-2959},
+	url          = {https://doi.org/10.1007/s10661-024-12724-w},
+	abstract     = {Urban green spaces are central components of urban ecosystems, providing refuge for wildlife while helping `future proof' cities against climate change. Conversion of urban green spaces to artificial turf has become increasingly popular in various developed countries, such as the UK, leading to reduced urban ecosystem services delivery. To date, there is no established satellite remote sensing method for reliably detecting and mapping artificial turf expansion at scale. We here assess the combined use of very high-resolution multispectral satellite imagery and classical, open source, supervised classification approaches to map artificial lawns in a typical British city. Both object-based and pixel-based classifications struggled to reliably detect artificial turf, with large patches of artificial turf not being any more reliably identified than small patches of artificial turf. As urban ecosystems are increasingly recognised for their key contributions to human wellbeing and health, the poor performance of these standard methods highlights the urgency of developing and applying new, easily accessible approaches for the monitoring of these important ecosystems.}
+}
 
