--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -257,7 +257,7 @@
 	abstract     = {Urban green spaces are central components of urban ecosystems, providing refuge for wildlife while helping `future proof' cities against climate change. Conversion of urban green spaces to artificial turf has become increasingly popular in various developed countries, such as the UK, leading to reduced urban ecosystem services delivery. To date, there is no established satellite remote sensing method for reliably detecting and mapping artificial turf expansion at scale. We here assess the combined use of very high-resolution multispectral satellite imagery and classical, open source, supervised classification approaches to map artificial lawns in a typical British city. Both object-based and pixel-based classifications struggled to reliably detect artificial turf, with large patches of artificial turf not being any more reliably identified than small patches of artificial turf. As urban ecosystems are increasingly recognised for their key contributions to human wellbeing and health, the poor performance of these standard methods highlights the urgency of developing and applying new, easily accessible approaches for the monitoring of these important ecosystems.}
 }
 @article{palteva2023,
-	title        = {Projet PALTEVA : Diagnostic de l'état de la population de palourdes européennes (\textit{Ruditapes decussatus}) dans la lagune de Thau},
+	title        = {Projet PALTEVA : {Diagnostic} de l'état de la population de palourdes européennes ({\textit{Ruditapes decussatus}}) dans la lagune de {Thau}},
 	author       = {Patrissi, Michela and Bernard, Ismaël and Hugo, Florian and Limonet, Jordane and Violette, Hervé and Sanchez, Florence and Caill-Milly, Nathalie and Bouvier, Corine and Lapègue, Sylvie and Holley, Jean-Franois and Lagarde, Franck},
 	year         = 2023,
 	journal      = {Suivi 2023},
