--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -261,5 +261,18 @@
 	author       = {Patrissi, Michela and Bernard, Ismaël and Hugo, Florian and Limonet, Jordane and Violette, Hervé and Sanchez, Florence and Caill-Milly, Nathalie and Bouvier, Corine and Lapègue, Sylvie and Holley, Jean-Franois and Lagarde, Franck},
 	year         = 2023,
 	journal      = {Suivi 2023},
-	pages        = {47}
+	pages        = 47
+}
+@article{VANOORT2023110486,
+	title        = {Can seaweeds feed the world? Modelling world offshore seaweed production potential},
+	author       = {P.A.J. {van Oort} and A. Verhagen and A.K. {van der Werf}},
+	year         = 2023,
+	journal      = {Ecological Modelling},
+	volume       = 484,
+	pages        = 110486,
+	doi          = {https://doi.org/10.1016/j.ecolmodel.2023.110486},
+	issn         = {0304-3800},
+	url          = {https://www.sciencedirect.com/science/article/pii/S0304380023002168},
+	keywords     = {Food security, Seaweed, Model, Nutrients, Wave height},
+	abstract     = {Pressure on the terrestrial ecosystems is large and big concerns exist regarding whether a growing world population can be fed from the land. Little is known about if and how much these concerns could be alleviated by harvesting more from the oceans. We modelled the biophysical production potential of seaweeds, and their current and possible future contribution to world food supply. We estimate seaweeds currently provide up to 0.13% of global food energy supply. Seaweed production is increasing more rapidly than terrestrial production. At current rates of increase we estimate seaweed energy contribution of 0.25% in 2050. Production potential of seaweeds could contribute up to 2 to 14% of global food supply if farming 1% of the modelled suitable space within the Exclusive Economic Zone. We show this large potential contribution to world food supply will only be achieved with unprecedented increases in seaweed production, while offshore seaweed cultivation is still in its infancy. The study shows large uncertainties that warrant further research. Modelling shows vast areas of world oceans are unsuitable because of being too far out of shore, having too low nutrient concentrations or having too high waves. Only 2–9% of world oceans and 6–25% of the Exclusive Economic Zone (EEZ) was shown to be suitable for seaweed production. Identifying suitable sites for offshore seaweed cultivation is therefore important. Site suitability maps reported for the 3 model species can be useful for private companies and policy makers expanding seaweed in new high potential production areas around the world.}
 }
