--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -270,7 +270,7 @@
 	journal      = {Ecological Modelling},
 	volume       = 484,
 	pages        = 110486,
-	doi          = {https://doi.org/10.1016/j.ecolmodel.2023.110486},
+	doi          = {10.1016/j.ecolmodel.2023.110486},
 	issn         = {0304-3800},
 	url          = {https://www.sciencedirect.com/science/article/pii/S0304380023002168},
 	keywords     = {Food security, Seaweed, Model, Nutrients, Wave height},
