--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -276,3 +276,16 @@
 	keywords     = {Food security, Seaweed, Model, Nutrients, Wave height},
 	abstract     = {Pressure on the terrestrial ecosystems is large and big concerns exist regarding whether a growing world population can be fed from the land. Little is known about if and how much these concerns could be alleviated by harvesting more from the oceans. We modelled the biophysical production potential of seaweeds, and their current and possible future contribution to world food supply. We estimate seaweeds currently provide up to 0.13% of global food energy supply. Seaweed production is increasing more rapidly than terrestrial production. At current rates of increase we estimate seaweed energy contribution of 0.25% in 2050. Production potential of seaweeds could contribute up to 2 to 14% of global food supply if farming 1% of the modelled suitable space within the Exclusive Economic Zone. We show this large potential contribution to world food supply will only be achieved with unprecedented increases in seaweed production, while offshore seaweed cultivation is still in its infancy. The study shows large uncertainties that warrant further research. Modelling shows vast areas of world oceans are unsuitable because of being too far out of shore, having too low nutrient concentrations or having too high waves. Only 2–9% of world oceans and 6–25% of the Exclusive Economic Zone (EEZ) was shown to be suitable for seaweed production. Identifying suitable sites for offshore seaweed cultivation is therefore important. Site suitability maps reported for the 3 model species can be useful for private companies and policy makers expanding seaweed in new high potential production areas around the world.}
 }
+@article{doi:10.1098/rsos.230520,
+	title        = {Plasticity and seasonality of the vertical migration behaviour of {Antarctic} krill using acoustic data from fishing vessels},
+	author       = {Bahlburg, Dominik  and Hüppe, Lukas  and Böhrer, Thomas  and Thorpe, Sally E.  and Murphy, Eugene J.  and Berger, Uta  and Meyer, Bettina},
+	year         = 2023,
+	journal      = {Royal Society Open Science},
+	volume       = 10,
+	number       = 9,
+	pages        = 230520,
+	doi          = {10.1098/rsos.230520},
+	url          = {https://royalsocietypublishing.org/doi/abs/10.1098/rsos.230520},
+	eprint       = {https://royalsocietypublishing.org/doi/pdf/10.1098/rsos.230520},
+	abstract     = {Understanding the vertical migration behaviour of Antarctic krill is important for understanding spatial distribution, ecophysiology, trophic interactions and carbon fluxes of this Southern Ocean key species. In this study, we analysed an eight-month continuous dataset recorded with an ES80 echosounder on board a commercial krill fishing vessel in the southwest Atlantic sector of the Southern Ocean. Our analysis supports the existing hypothesis that krill swarms migrate into deeper waters during winter but also reveals a high degree of variability in vertical migration behaviour within seasons, even at small spatial scales. During summer, we found that behaviour associated with prolonged surface presence primarily occurred at low surface chlorophyll a concentrations whereas multiple ascent–descent cycles per day occurred when surface chlorophyll a concentrations were elevated. The high plasticity, with some krill swarms behaving differently in the same location at the same time, suggests that krill behaviour is not a purely environmentally driven process. Differences in life stage, physiology and type of predator are likely other important drivers. Finally, our study demonstrates new ways of using data from krill fishing vessels, and with the routine collection of additional information in potential future projects, they have great potential to significantly advance our understanding of krill ecology.}
+}
